Bug 65163 - FILESAVE: Pictures on buttons, created in forms, could not be embedded
Summary: FILESAVE: Pictures on buttons, created in forms, could not be embedded
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.0.3.3 release
Hardware: x86 (IA32) All
: medium normal
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:4.4.0.0.beta2 target:4.5.0 tar...
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2013-05-30 08:06 UTC by Robert Großkopf
Modified: 2015-12-17 07:15 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2013-05-30 08:06:06 UTC
Open a form in a database for editing.
Add a push-button.
Open the properties of the push-button (right mouseclick, control).
Go to "Graphics".
You could only link graphics to this button. It isn't possible to embed graphics, as it was in LO 3.3, LO 3.4, LO 3.5 (with another bug - pictures were lost) and LO 3.6 (not the last version; also the bug, that pictures were lost)
Comment 1 Jochen 2013-05-31 07:15:30 UTC
Hi Robert,

I tested with LO 4.0.1 and Windows XP (configuration on my "work-PC"). It works fine and correct.

It is IMHO the second problem in the last days with Linux: you have decribed two bugs with Linux - not confirmed with Windows. What do you mean: is there a problem witk Linux?
Comment 2 Jochen 2013-05-31 08:24:58 UTC
Hi *,

Robert and I have discussed the problem via PM.

Now I can reproduce the problem: Pictures on buttons, created in forms, could not be embedded - also using Windows (and now using LO 4.0.3)
Comment 3 a.scholz 2013-06-19 10:24:34 UTC
Hi *,

can confirm this bug with LO 4.0.3.3 / Windows 7

affects Calc as well (may be UI rather than DB related)
affects regular buttons as well as graphical buttons.

When choosing the Image the Field 'link' is not checked and not accessible.
That should embed the image in the file.

As long as the images are accessible the buttons display fine.

Since the absolute path of those images changes with platform and OS it's no longer possible to open those forms / sheets in different environments.

I would like to see this getting a higher priority, since it breaks applications that use such buttons and run in multi-OS environments.
Comment 4 Michael Stahl 2013-10-08 21:55:34 UTC
trying this with the "Form Controls" in Writer...

checkbox can't be clicked in any 4.0.x release

up to 4.0.2.2 had "Link" un-checked

from 4.0.3.3 on the "Link" is checked - which i agree is a much worse default

interestingly on the 3.6 branch checkbox was clickable
in 3.6.0.4 and 3.6.1.2 but not in 3.6.2.2 and later
Comment 5 Robert Großkopf 2013-10-09 17:14:23 UTC
(In reply to comment #4)
> trying this with the "Form Controls" in Writer...
> 
> checkbox can't be clicked in any 4.0.x release
> 
> up to 4.0.2.2 had "Link" un-checked
> 
> from 4.0.3.3 on the "Link" is checked - which i agree is a much worse default
> 
> interestingly on the 3.6 branch checkbox was clickable
> in 3.6.0.4 and 3.6.1.2 but not in 3.6.2.2 and later

Could it be you meant another bug? https://bugs.freedesktop.org/show_bug.cgi?id=68657 is about checkboxes, which doesn't work any more together with a char-field in the database. 
This bug is about pictures on buttons, which couldn't be embedded.
Comment 6 Michael Stahl 2013-10-09 17:44:23 UTC
(In reply to comment #5)
> Could it be you meant another bug?
> https://bugs.freedesktop.org/show_bug.cgi?id=68657 is about checkboxes,

nope i don't mean checkbox form controls,
i mean the "Link" checkbox in the Graphics file dialog
that determines if the graphic should be embedded.
Comment 7 Commit Notification 2014-11-03 17:06:05 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a3fb06a0a9d03e31a8472dcc3cc994faeb59718c

fdo#65163: sw: CrossRefBookmark: ensure that unused m_pPos2 is null

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Stahl 2014-11-03 17:07:27 UTC
disregard comment #7, wrong bug number in commit message :(
Comment 9 Matthew Francis 2014-12-04 15:35:11 UTC
 ba2b3f1f9d9e4a2edd571a16dab7746bd17ee03a is the first bad commit
commit ba2b3f1f9d9e4a2edd571a16dab7746bd17ee03a
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Mon Dec 10 09:00:46 2012 +0000

    source-hash-bed0447cefb949fc77cfde7543397d96590082ba
    
    commit bed0447cefb949fc77cfde7543397d96590082ba
    Author:     Daniel Bankston <daniel.e.bankston@gmail.com>
    AuthorDate: Thu Jul 12 08:23:54 2012 -0500
    Commit:     Kohei Yoshida <kohei.yoshida@gmail.com>
    CommitDate: Thu Aug 23 11:49:57 2012 -0400
    
        Check for more cases of functions that should always be recalculated
    
        Thanks to Eike Rathke for pointing this out.
    
        Change-Id: Ie2ce2ebe54cd290a7bf1c55d58790e21833b1105

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# skip: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect skip e02439a3d6297a1f5334fa558ddec5ef4212c574
# good: [d1cca78ab77d64482b6643bc643d29dbe2dd1442] source-hash-2d19e9bb07ccff3134f855812dddfda5c07b1fe4
git bisect good d1cca78ab77d64482b6643bc643d29dbe2dd1442
# good: [d1cca78ab77d64482b6643bc643d29dbe2dd1442] source-hash-2d19e9bb07ccff3134f855812dddfda5c07b1fe4
git bisect good d1cca78ab77d64482b6643bc643d29dbe2dd1442
# bad: [9daa289e178460daaafa4b3911031df5b8736218] source-hash-704292996a3731a61339b1a4a5c90c9403aa095f
git bisect bad 9daa289e178460daaafa4b3911031df5b8736218
# bad: [6d5c8da992dd6f7af0bda654787652a9221659e8] source-hash-4df639baacd871cb2793e75dd9721ad2ae715e20
git bisect bad 6d5c8da992dd6f7af0bda654787652a9221659e8
# good: [5b4693bb72eca5e38e3f56d036bca425c9a21b37] source-hash-e3633f60b349022994e291aa3d1a0c90c3403b2e
git bisect good 5b4693bb72eca5e38e3f56d036bca425c9a21b37
# good: [89740762f0af849e492932bd71e59149cdcd5a00] source-hash-06f20d73da21342046a480a6b22af69901351328
git bisect good 89740762f0af849e492932bd71e59149cdcd5a00
# good: [241d451e09694446622f9767fb76db50481c9e32] source-hash-c3aa1cefdc6521d34a2a32c20bae1593e1edb5ba
git bisect good 241d451e09694446622f9767fb76db50481c9e32
# bad: [977cf448a89278afffc3dd6ece1dea3d0d695345] source-hash-cbc44df67cfd13849f3de85edcdd39b5fec8b06c
git bisect bad 977cf448a89278afffc3dd6ece1dea3d0d695345
# bad: [cf8644ffc4c66e8567e9c4be706caac879032caf] source-hash-3cf91a21fc5089fb7f051bf8a04d2049da88179f
git bisect bad cf8644ffc4c66e8567e9c4be706caac879032caf
# bad: [6d8bd8dba8e0b0a4c2efd95b03c2b5656646bf33] source-hash-a581d31b227623e09d2970a91214fda398f98eda
git bisect bad 6d8bd8dba8e0b0a4c2efd95b03c2b5656646bf33
# good: [98e26b741cd0eff4b7549d782d7db5a1e98eb1a6] source-hash-c29af1572ad15ac5199a09e5812fb8354c165329
git bisect good 98e26b741cd0eff4b7549d782d7db5a1e98eb1a6
# bad: [ba2b3f1f9d9e4a2edd571a16dab7746bd17ee03a] source-hash-bed0447cefb949fc77cfde7543397d96590082ba
git bisect bad ba2b3f1f9d9e4a2edd571a16dab7746bd17ee03a
# first bad commit: [ba2b3f1f9d9e4a2edd571a16dab7746bd17ee03a] source-hash-bed0447cefb949fc77cfde7543397d96590082ba
Comment 10 Matthew Francis 2014-12-04 15:39:04 UTC
Within this range, the following commit looks highly relevant:

commit e4b0ce8887a743d30a0107bc7b8f652b0e3b074c
Author: Joel Madero <jmadero.dev@gmail.com>
Date:   Tue Aug 21 12:14:34 2012 -0700

    fdo#53001 disable unlink graphics in image control dialog in base report builder
    
    Embedding graphics in a report builder report is not implemented,
    so do not propose it to the user.
    It already was not proposed the dialog raised by
    "Insert->Picture->From File"
    This commit disables embedding the UI when selecting
    an image for an already existing Graphic control
    (as opposed to inserting a new graphic control).
    
    Change-Id: I107bc59bef8bb29a75140542cc5c2779a37ed113
    Signed-off-by: Lionel Elie Mamane <lionel@mamane.lu>



If the commit message is correct, the bug is that it was ever offered, and the feature is working as (currently) intended. Allowing embedding would therefore be an enhancement

-> Setting severity to "enhancement"
Comment 11 Robert Großkopf 2014-12-04 16:47:11 UTC
(In reply to Matthew Francis from comment #10)
> Within this range, the following commit looks highly relevant:
> 
> commit e4b0ce8887a743d30a0107bc7b8f652b0e3b074c
> Author: Joel Madero <jmadero.dev@gmail.com>
> Date:   Tue Aug 21 12:14:34 2012 -0700
> 
>     fdo#53001 disable unlink graphics in image control dialog in base report
> builder
> 
> If the commit message is correct, the bug is that it was ever offered, and
> the feature is working as (currently) intended. Allowing embedding would
> therefore be an enhancement

It was never intended to disable unlink in a button for a form. It was intended to do this in the Report-Builder. If it has the effect, that pictures for the buttons of a form could not be embedded this is bugby behavior, which had not been planned by the commit above.
Comment 12 Commit Notification 2014-12-04 18:17:43 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6e7e7d0252bf030abf758469eebdb2030cc1d315&h=libreoffice-4-4

fdo#65163 reintroduce embedded picture for form components

It will be available in 4.4.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2014-12-04 18:19:01 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ac49b8abb40098edb8f650037a2b5742b35c415f

fdo#65163 reintroduce embedded picture for form components

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Lionel Elie Mamane 2014-12-04 18:24:01 UTC
Many thanks for the bibisect and the analysis of the range given by the bibisect.
Comment 15 Commit Notification 2014-12-05 09:14:40 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=86cc39cc51074788f59dc56f9371d1d4ed615eb6&h=libreoffice-4-3

fdo#65163 reintroduce embedded picture for form components

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Robinson Tryon (qubit) 2015-12-17 07:15:16 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]