fdo#65163: sw: CrossRefBookmark: ensure that unused m_pPos2 is null

... to prevent ~SwIndexReg() assertion when the note it is initialized
with is deleted, since m_pPos2 will never be corrected because
CrossRefBookmark essentially denies that it exists.

Change-Id: I48543c47da0f4006e8381f4cc8a2ee81826461c9